--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="styles/responsive-nav.css">
     <link rel="stylesheet" href="styles/subnav.css">
     <link rel="stylesheet" href="styles/repertorio-espanol.css">
+    <link rel='stylesheet' href='bower_components/fullcalendar/dist/fullcalendar.css' />
     <link rel="stylesheet" href="styles/responsive-repertorio-espanol.css">
     <link rel="stylesheet" href="styles/combo-tickets.css">
     <script src="scripts/responsive-nav.js"></script>
@@ -104,7 +105,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/angular-touch/angular-touch.min.js"></script>
     <script src="bower_components/bower-angular-sanitize/angular-sanitize.min.js"></script>
-
+    <script src='bower_components/fullcalendar/dist/fullcalendar.js'></script>
     <script type="text/javascript" src="scripts/jqwidgets/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="scripts/jqwidgets/jqwidgets/jqxdata.js"></script>
     <script type="text/javascript" src="scripts/jqwidgets/jqwidgets/globalization/globalize.js"></script>
@@ -136,6 +137,7 @@
     <script src="scripts/directives/backgroundLoader.js"></script>
     <script src="scripts/directives/searchButton.js"></script>
     <script src="scripts/directives/searchBox.js"></script>
+    <script src="scripts/directives/fullCalendar.js"></script>
     <script src="scripts/controllers/searchController.js"></script>
 
     <script src="scripts/services/patrondata.js"></script>
